--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,33 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./style.css" rel="stylesheet">
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Narnoor&display=swap" rel="stylesheet">
 </head>
-<body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+
+<body class="font-narnoor">
+  <section class="relative h-[30rem] flex items-center justify-center">
+    <img class="w-full h-full object-cover absolute" src="./img/cat.jpg" alt="search-img">
+    <div class="relative z-[2] text-white">
+      <h1 class="text-5xl font-semibold text-center">Catsels Image Gallery</h1>
+      <p class="text-2xl text-center mt-3">Search any images within a second</p>
+      <div class="h-16 mx-8 my-0">
+        <input class="w-full h-10 mt-3 border rounded-md outline-none pl-14 text-lg" type="text" placeholder="Search images..">
+        <i class="fa-solid fa-magnifying-glass absolute left-12 top-28 text-2xl" style="color: #893c21;"></i>
+      </div>
+    </div>
+  </section>
+
 </body>
+
 </html>
