feat: working on search input

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
     <div class="relative z-[2] text-white">
       <h1 class="text-5xl font-semibold text-center">Catsels Image Gallery</h1>
       <p class="text-2xl text-center mt-3">Search any images within a second</p>
-      <div class="h-16 mx-8 my-0">
+      <div class="h-16 mx-8 my-0 search-box">
         <input class="w-full h-10 mt-3 border rounded-md outline-none pl-14 text-lg text-semibold" type="text"
           placeholder="Search images..">
         <i class="fa-solid fa-magnifying-glass absolute left-12 top-28 text-2xl" style="color: #893c21;"></i>
