feat: added infinite scroll

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       <h1 class="text-5xl font-semibold text-center">Catsels Image Gallery</h1>
       <p class="text-2xl text-center mt-3">Search any images within a second</p>
       <div class="h-16 mx-8 my-0 search-box">
-        <input class="w-full h-10 mt-3 border rounded-md outline-none pl-14 text-lg text-semibold" type="text"
+        <input class="w-full h-10 mt-3 border rounded-md outline-none pl-14 text-lg text-semibold text-black" type="text"
           placeholder="Search images..">
         <i class="fa-solid fa-magnifying-glass absolute left-12 top-28 text-2xl" style="color: #893c21;"></i>
       </div>
@@ -32,9 +32,9 @@
 
   <section class=" container mx-auto mt-3 flex flex-col items-center">
     <ul class="images grid grid-cols-3 gap-4 mt-9"></ul>
-    <button type="button"
+    <!-- <button type="button"
       class="text-black text-xl text-bold bg-gradient-to-r from-amber-50 via-orange-400 to-amber-700 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-amber-50 dark:focus:ring-orange-400 font-medium rounded-lg px-5 py-3 text-center mr-2 mb-10 mt-7 load-more">Load
-      More</button>
+      More</button> -->
   </section>
 
   <script src="script.js"></script>
