feat: added lightbox

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./style.css" rel="stylesheet">
+  <link href="./lightbox.css" rel="stylesheet">
   <!-- font awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
@@ -17,20 +18,39 @@
 
 <body class="font-narnoor">
 
+  <div class="lightbox">
+    <div class="wrapper">
+      <header>
+        <div class="photoInfo">
+          <i class="fa-solid fa-camera text-2xl"></i>
+          <span class="text-2xl"></span>
+        </div>
+        <div class="buttons">
+          <i class="fa-solid fa-download text-2xl"></i>
+          <i class="fa-solid fa-xmark text-3xl"></i>
+        </div>
+      </header>
+      <div class="preview-img">
+        <div class="img"><img src="" alt=""></div>
+      </div>
+    </div>
+  </div>
+
+
   <section class="relative h-[30rem] flex items-center justify-center">
     <img id="myImg" class="w-full h-full object-cover absolute" src="./img/cat.jpg" alt="search-img">
     <div class="relative z-[2] text-white">
       <h1 class="text-5xl font-semibold text-center">Catsels Image Gallery</h1>
       <p class="text-2xl text-center mt-3">Search any images within a second</p>
       <div class="h-16 mx-8 my-0 search-box">
-        <input class="w-full h-10 mt-3 border rounded-md outline-none pl-14 text-lg text-semibold text-black" type="text"
-          placeholder="Search images..">
+        <input class="w-full h-10 mt-3 border rounded-md outline-none pl-14 text-lg text-semibold text-black"
+          type="text" placeholder="Search images..">
         <i class="fa-solid fa-magnifying-glass absolute left-12 top-28 text-2xl" style="color: #893c21;"></i>
       </div>
     </div>
   </section>
 
-  <section class=" container mx-auto mt-3 flex flex-col items-center">
+  <section class="container mx-auto mt-3 flex flex-col items-center">
     <ul class="images grid grid-cols-3 gap-4 mt-9"></ul>
     <!-- <button type="button"
       class="text-black text-xl text-bold bg-gradient-to-r from-amber-50 via-orange-400 to-amber-700 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-amber-50 dark:focus:ring-orange-400 font-medium rounded-lg px-5 py-3 text-center mr-2 mb-10 mt-7 load-more">Load
